--- a/app/src/main/res/layout-night/fragment_facilities_map.xml
+++ b/app/src/main/res/layout-night/fragment_facilities_map.xml
@@ -16,6 +16,12 @@
             android:layout_height="match_parent" />
 
         <TextView
+            android:layout_width="match_parent"
+            android:layout_height="70dp"
+            android:background="@color/lighter_grey"
+            app:layout_constraintBottom_toBottomOf="@id/hospital_checkbox"/>
+
+        <TextView
             android:id="@+id/facilities_headline"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -29,7 +35,7 @@
 
         <CheckBox
             android:id="@+id/hospital_checkbox"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@color/lighter_grey"
             android:buttonTint="@color/white"
