--- a/app/src/main/res/layout-sw600dp/fragment_paramedic_screen.xml
+++ b/app/src/main/res/layout-sw600dp/fragment_paramedic_screen.xml
@@ -209,7 +209,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:padding="3dp"
-                    android:text="Breathing, Not concsious"
+                    android:text="Breathing, Not conscious"
                     android:textSize="22sp"
                     app:layout_constraintStart_toEndOf="@id/current_emergency_victim_state"
                     app:layout_constraintTop_toBottomOf="@id/current_emergency_victims_text" />
@@ -220,7 +220,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:backgroundTint="?attr/colorPrimaryVariant"
-                    android:text="Victim info"
+                    android:text="@string/victim_info"
                     android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4"
                     app:layout_constraintBottom_toBottomOf="@+id/current_emergency_address"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -233,7 +233,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:backgroundTint="?attr/colorPrimaryVariant"
-                    android:text="Description"
+                    android:text="@string/description"
                     android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4"
                     app:layout_constraintBottom_toBottomOf="@+id/current_emergency_victim_state"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -242,6 +242,17 @@
             </androidx.constraintlayout.widget.ConstraintLayout>
 
         </androidx.cardview.widget.CardView>
+
+        <Button
+            android:id="@+id/shift_button"
+            style="@style/Widget.Material3.Button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp"
+            android:textSize="18sp"
+            android:text="Shift"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <LinearLayout
             android:id="@+id/linearLayout9"
